# example-sfml-cmake

./: CMakeLists.txt  README.md  windows_run.bat  windows_setup_1.bat  windows_setup_2.bat
source/: main.cpp
